tests/toy/neg/000995_mutation.toylang
program a = { if a then sleep do else sleep; } .
